--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,113 +1,112 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string {aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{lee2023rotation,
+  title={Rotation Key Reduction for Client-Server Systems of Deep Neural Network on Fully Homomorphic Encryption},
+  author={Lee, Joon-Woo and Lee, Eunsang and Kim, Young-Sik and No, Jong-Seon},
+  booktitle={International Conference on the Theory and Application of Cryptology and Information Security},
+  pages={36--68},
+  year={2023},
+  organization={Springer}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{lee2023precise,
+  title={Precise approximation of convolutional neural networks for homomorphically encrypted data},
+  author={Lee, Junghyun and Lee, Eunsang and Lee, Joon-Woo and Kim, Yongjune and Kim, Young-Sik and No, Jong-Seon},
+  journal={IEEE Access},
+  year={2023},
+  publisher={IEEE}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@article{koo2023key,
+  title={Key Reduction in Multi-Key and Threshold Multi-Key Homomorphic Encryptions by Reusing Error},
+  author={Koo, Zahyun and Lee, Joon-Woo and No, Jong-Seon and Kim, Young-Sik},
+  journal={IEEE Access},
+  year={2023},
+  publisher={IEEE}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  selected={true}
+@inproceedings{lee2022low,
+  title={Low-complexity deep convolutional neural networks on fully homomorphic encryption using multiplexed parallel convolutions},
+  author={Lee, Eunsang and Lee, Joon-Woo and Lee, Junghyun and Kim, Young-Sik and Kim, Yongjune and No, Jong-Seon and Choi, Woosuk},
+  booktitle={International Conference on Machine Learning},
+  pages={12403--12422},
+  year={2022},
+  organization={PMLR}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{lee2022high,
+  title={High-precision bootstrapping for approximate homomorphic encryption by error variance minimization},
+  author={Lee, Yongwoo and Lee, Joon-Woo and Kim, Young-Sik and Kim, Yongjune and No, Jong-Seon and Kang, HyungChul},
+  booktitle={Annual International Conference on the Theory and Applications of Cryptographic Techniques},
+  pages={551--580},
+  year={2022},
+  organization={Springer}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{lee2022privacy,
+  title={Privacy-preserving machine learning with fully homomorphic encryption for deep neural network},
+  author={Lee, Joon-Woo and Kang, HyungChul and Lee, Yongwoo and Choi, Woosuk and Eom, Jieun and Deryabin, Maxim and Lee, Eunsang and Lee, Junghyun and Yoo, Donghoon and Kim, Young-Sik and others},
+  journal={iEEE Access},
+  volume={10},
+  pages={30039--30054},
+  year={2022},
+  publisher={IEEE}
+}@article{lee2022optimization,
+  title={Optimization of homomorphic comparison algorithm on rns-ckks scheme},
+  author={Lee, Eunsang and Lee, Joon-Woo and Kim, Young-Sik and No, Jong-Seon},
+  journal={IEEE Access},
+  volume={10},
+  pages={26163--26176},
+  year={2022},
+  publisher={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{koo2021improved,
+  title={Improved Reduction Between SIS Problems Over Structured Lattices},
+  author={Koo, Zahyun and Lee, Yongwoo and Lee, Joon-Woo and No, Jong-Seon and Kim, Young-Sik},
+  journal={IEEE Access},
+  volume={9},
+  pages={157083--157092},
+  year={2021},
+  publisher={IEEE}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{lee2021high,
+  title={High-precision bootstrapping of RNS-CKKS homomorphic encryption using optimal minimax polynomial approximation and inverse sine function},
+  author={Lee, Joon-Woo and Lee, Eunsang and Lee, Yongwoo and Kim, Young-Sik and No, Jong-Seon},
+  booktitle={Advances in Cryptology--EUROCRYPT 2021: 40th Annual International Conference on the Theory and Applications of Cryptographic Techniques, Zagreb, Croatia, October 17--21, 2021, Proceedings, Part I 40},
+  pages={618--647},
+  year={2021},
+  organization={Springer}
+}
+@article{lee2021analysis,
+  title={Analysis of modified shell sort for fully homomorphic encryption},
+  author={Lee, Joon-Woo and Kim, Young-Sik and No, Jong-Seon},
+  journal={IEEE Access},
+  volume={9},
+  pages={126198--126215},
+  year={2021},
+  publisher={IEEE}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{lee2020near,
+  title={Near-optimal polynomial for modulus reduction using l2-norm for approximate homomorphic encryption},
+  author={Lee, Yongwoo and Lee, Joon-Woo and Kim, Young-Sik and No, Jong-Seon},
+  journal={IEEE Access},
+  volume={8},
+  pages={144321--144330},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{lee2018improvement,
+  title={Improvement of Extended Least Difference Greedy Clique-Cover Algorithm for Index Coding},
+  author={Lee, Joon-Woo and Kim, Jae-Won and No, Jong-Seon},
+  booktitle={2018 International Conference on Information and Communication Technology Convergence (ICTC)},
+  pages={818--820},
+  year={2018},
+  organization={IEEE}
 }
